# PDFRetriever

./: .env  .env.example  .gitignore  Dockerfile  README.md  data_extraction_llms.py  docker-compose.yml  documentation.md  main.py  performance_benchmarks.md  pyproject.toml  render.yaml
app/: functions.py  requirements.txt  streamlit_app.py  tempCodeRunnerFile.py
backend/: requirements.txt
backend/app/: list_gemini_models.py  logic.py  main.py  test_model_names.py
db/: chroma.sqlite3  structured_data.db
db/2d1d8272-251b-4fc5-bf47-146c3659fc4b/: index_metadata.pickle
db/chats/: 568bcd0e-82d2-4d20-81cb-42b3f819cde6.json
db/vectorstore/: chroma.sqlite3
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
frontend/src/components/: AnalysisPanel.jsx  AuthPortal.jsx  ChatInterface.jsx  MainArea.jsx  PDFViewer.jsx  Sidebar.jsx  Toast.jsx
vectorstore_chroma/: chroma.sqlite3
vectorstore_test/: chroma.sqlite3
