[project]
name = "intelproj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "scikit-learn>=1.4.0",
    # --- LangChain core packages ---
    "langchain>=0.3.0",
    "langchain-core>=0.3.13",
    "langchain-community>=0.3.0",
    "langchain-chroma>=1.1.0",
    "langchain-google-genai>=2.0.0",
    # --- Google Generative AI ---
    "google-generativeai==0.8.5",
    "google-ai-generativelanguage==0.6.15",
    # --- Vector store and document tools ---
    "chromadb>=0.4.22",
    "pypdf>=4.2.0",
    # --- Utilities and environment ---
    "pandas>=2.2.0",
    "python-dotenv>=1.0.1",
    "streamlit>=1.37.0",
    "pydantic>=2.8.2",
    # --- Optional ---
    "langchain-text-splitters>=0.0.1",
    "dotenv>=0.9.9",
    "pdfplumber>=0.11.8",
    "pdf2image>=1.17.0",
    "pillow>=12.0.0",
    "pytesseract>=0.3.13",
    "google-cloud-vision>=3.11.0",
    "sqlalchemy>=2.0.44",
    "psycopg2-binary>=2.9.11",
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.10",
]
